# AI-Employee

./: .claude.json  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  orchestrator.py  pyproject.toml  requirements.txt  run_process_inbox.py  sync_sessions_to_ec2.py
.claude/commands/: ceo-briefing.md  create-plan.md  daily-briefing.md  execute-plan.md  facebook-post.md  gmail-watcher.md  instagram-post.md  linkedin-post.md  move-to-done.md  odoo-invoice.md  process-inbox.md  ralph-status.md  review-approvals.md  schedule-briefing.md  twitter-post.md  vault-status.md  whatsapp-watcher.md
AI_Employee_Vault/: .processed_gmail_ids  .processed_whatsapp_ids  Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Approved/: LINKEDIN_2026-03-29.md  LINKEDIN_2026-03-29_silver.md  WHATSAPP_REPLY_2026-03-29_Mine.md
AI_Employee_Vault/Briefings/: .gitkeep
AI_Employee_Vault/Done/: APPROVAL_EMAIL_Binance_Promo_20260228.md  APPROVAL_EMAIL_Google_2FA_20260228.md  DRAFT_EMAIL_platinum_demo.md  DRAFT_EMAIL_test_20260228.md  (+43 more)
dashboard/: app.py
docs/: gmail_setup.md  mcp_setup.md
mcp_server/: __init__.py  email_mcp.py  odoo_mcp.py
schedulers/: ceo_briefing.py  facebook_scheduler.py  instagram_scheduler.py  linkedin_scheduler.py  twitter_scheduler.py
scripts/: ralph_check.py
watchers/: __init__.py  base_watcher.py  email_watcher.py  facebook_watcher.py  filesystem_watcher.py  gmail_watcher.py  instagram_watcher.py  linkedin_watcher.py  ralph_watcher.py  twitter_watcher.py  whatsapp_watcher.py
(+38 files in other folders)
